# ChooseToPath

./: Cargo.toml
src/: lib.rs  main.rs
src/background/: interactions.rs  mod.rs  spawn.rs
src/network/: mod.rs
src/network/client/: events.rs  handle.rs  mod.rs  observers.rs
src/network/server/: events.rs  handle.rs  mod.rs  observers.rs
src/player/: def.rs  mod.rs  movements.rs
