[package]
name = "ChooseToPath"
version = "0.1.0"
edition = "2021"

[dependencies]
aeronet = "0.12.0"
aeronet_websocket = { version = "0.12.0", features = ["client", "server"] }
bevy = "0.15.3"
bevy-inspector-egui = "0.29.1"
bincode = "1.3.3"
serde = "1.0.219"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
